Automatically backed up by Learn

--- a/my_list.html
+++ b/my_list.html
@@ -1,8 +1,6 @@
-<li>
-  "pre-workout"
-"BCAA's"
-"gym clothes"
-"gym membership"
-"Glutamine"
-"Creatine"
-</li>
+<li>"pre-workout"</li>
+"BCAA's"</li>
+"gym clothes"</li>
+"gym membership"</li>
+"Glutamine"</li>
+"Creatine"</li>
