Automatically backed up by Learn

--- a/my_list.html
+++ b/my_list.html
@@ -1,6 +1,6 @@
 <li>"pre-workout"</li>
-"BCAA's"</li>
-"gym clothes"</li>
-"gym membership"</li>
-"Glutamine"</li>
-"Creatine"</li>
+<li>"BCAA's"</li>
+<li>"gym clothes"</li>
+<li>"gym membership"</li>
+<li>"Glutamine"</li>
+<li>"Creatine"</li>
